k8s-manifest-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetapp
  labels:
    app: aspnetapp
spec:
  selector:
    matchLabels:
      app: aspnetapp
  template:
    metadata:
      labels:
        app: aspnetapp
    spec:
      containers:
      - name: aspnetapp
        image: "dmctest.azurecr.io/aspnetapp:latest"
        ports:
        - containerPort: 80
          protocol: TCP        
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
